--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/tes_server_polindra
-        chmod 600 ~/.ssh/tes_server_polindra
-        ssh-keyscan -p 8022 -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+      - name: Setup SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+        run: |
+          echo "Checking required secrets..."
 
-    - name: Deploy to Server
-      run: |
-        rsync -avz --delete \
-        -e "ssh -p 8022 -i ~/.ssh/tes_server_polindra" \
-        ./ \
-        ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:${{ secrets.DEPLOY_PATH }}
+          if [ -z "$SERVER_IP" ]; then
+            echo "SERVER_IP kosong ❌"
+            exit 1
+          fi
+
+          if [ -z "$SSH_PRIVATE_KEY" ]; then
+            echo "SSH_PRIVATE_KEY kosong ❌"
+            exit 1
+          fi
+
+          mkdir -p $HOME/.ssh
+          echo "$SSH_PRIVATE_KEY" > $HOME/.ssh/tes_server_polindra
+          chmod 600 $HOME/.ssh/tes_server_polindra
+
+          ssh-keyscan -p 8022 -H "$SERVER_IP" >> $HOME/.ssh/known_hosts
+
+      - name: Deploy to Server
+        env:
+          SERVER_USER: ${{ secrets.SERVER_USER }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+        run: |
+          if [ -z "$SERVER_USER" ] || [ -z "$SERVER_IP" ] || [ -z "$DEPLOY_PATH" ]; then
+            echo "Salah satu secret deploy kosong ❌"
+            exit 1
+          fi
+
+          rsync -avz --delete \
+            -e "ssh -p 8022 -i $HOME/.ssh/tes_server_polindra" \
+            ./ \
+            "$SERVER_USER@$SERVER_IP:$DEPLOY_PATH"
